--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ defaults: &defaults
   docker:
     - image: karrot/python:1.5
 
-client_defaults: &client_defaults
+client-defaults: &client-defaults
   working_directory: ~/build-root/client
   docker:
     - image: circleci/node:8.10
@@ -17,6 +17,7 @@ build-android: &build-android
   name: build android
   command: |
     if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+      echo "skip step"
       exit 0
     fi
     rm -f cordova/www
@@ -48,7 +49,7 @@ jobs:
             - .
 
   client-dependencies:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
@@ -57,9 +58,10 @@ jobs:
           - v1-client-dependencies-{{ checksum "package.json" }}
           - v1-client-dependencies-
       - run:
-          name: yarn
+          name: install client dependencies
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             yarn
@@ -69,18 +71,20 @@ jobs:
           key: v1-client-dependencies-{{ checksum "package.json" }}
 
   client-test:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: test client
           environment:
             JEST_JUNIT_OUTPUT: test-reports/junit.xml
           command: |
             mkdir -p test-reports
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             yarn add jest-junit
@@ -95,31 +99,35 @@ jobs:
           path: test-reports
 
   client-lint:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: lint client files
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             yarn lint
 
   client-build-dev:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: build dev client
           environment:
             KARROT_THEME: dev
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             rm -r dist || true
@@ -131,28 +139,32 @@ jobs:
             - dist-dev
 
   client-deploy-dev:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy dev client
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             sudo apt install -y rsync
             ./deploy.sh "${CIRCLE_BRANCH}" "${CIRCLE_BRANCH}"
 
   client-build-prod:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: build production client
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             rm -r dist || true
@@ -164,28 +176,32 @@ jobs:
             - dist-prod
 
   client-deploy-prod:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy production client
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             sudo apt install -y rsync
             ./deploy.sh "${CIRCLE_BRANCH}" release
 
   client-build-storybook:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: build storybook
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             yarn build-storybook
@@ -195,15 +211,17 @@ jobs:
             - storybook-static
 
   client-build-cordova-dev:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: build dev cordova app
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             rm -r dist || true
@@ -215,15 +233,17 @@ jobs:
             - dist-app-dev
 
   client-build-cordova-prod:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - restore_cache:
           key: v1-client-dependencies-{{ checksum "package.json" }}
       - run:
+          name: build production cordova app
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             rm -r dist || true
@@ -260,13 +280,15 @@ jobs:
             - android-dev.apk
 
   client-deploy-android-dev:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy dev android apk
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             sudo apt install -y rsync
@@ -295,13 +317,15 @@ jobs:
             - android-prod.apk
 
   client-deploy-android-prod:
-    <<: *client_defaults
+    <<: *client-defaults
     steps:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy production android apk
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             sudo apt install -y rsync
@@ -334,6 +358,7 @@ jobs:
           command: |
             mkdir -p test-reports
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             test -d env/bin || virtualenv -p python3 env
@@ -364,8 +389,10 @@ jobs:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy dev server
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             ./deploy.sh karrot-dev
@@ -377,14 +404,16 @@ jobs:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy production server karrot.world
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             ./deploy.sh karrot-world
 
   docs-build:
-    <<: *client_defaults
+    <<: *client-defaults
     working_directory: ~/build-root/docs
     steps:
       - attach_workspace:
@@ -395,8 +424,10 @@ jobs:
             - v1-docs-{{ checksum "package.json" }}
             - v1-docs-
       - run:
+          name: build karrot docs
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             yarn
@@ -412,14 +443,16 @@ jobs:
             - docs-dist
 
   docs-deploy:
-    <<: *client_defaults
+    <<: *client-defaults
     working_directory: ~/build-root/docs
     steps:
       - attach_workspace:
           at: ~/build-root
       - run:
+          name: deploy karrot docs
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             ./deploy.sh master
@@ -451,6 +484,7 @@ jobs:
             LANG: C.UTF-8
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ] && [ -e ../client/ci_meta/not_changed ] && [ -e ../client/ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             cp config/local_settings.py.ci config/local_settings.py
@@ -463,6 +497,7 @@ jobs:
           background: true
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ] && [ -e ../client/ci_meta/not_changed ] && [ -e ../client/ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             cd ../client
@@ -478,6 +513,7 @@ jobs:
           name: testcafe
           command: |
             if [ -e ci_meta/not_changed ] && [ -e ci_meta/success ] && [ -e ../client/ci_meta/not_changed ] && [ -e ../client/ci_meta/success ]; then
+              echo "skip step"
               exit 0
             fi
             apt-get install wget
